[package]
name = "nba-data-fetcher"
version = "0.1.0"
edition = "2024"
description = "CLI tool to fetch and display NBA game summaries for today or yesterday"
authors = ["David Parrar <davidc.parrar@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"
